new subscription for the new year: desksms.subscription1. Switch to HttpUrlConnection, which allows connection reuse and gzip. Add a wakelock to the sync.